[gd_scene load_steps=11 format=3 uid="uid://ciol0q1w6q1wp"]

[ext_resource type="Script" path="res://character/scripts/slime.gd" id="1_w8sym"]
[ext_resource type="Texture2D" uid="uid://cbantefdul5on" path="res://character/assets/slime.png" id="1_wt0e8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s47f0"]
size = Vector2(16, 16)

[sub_resource type="Animation" id="Animation_5niwf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_brla0"]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [14, 15, 16, 17, 18, 19, 20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_ph41n"]
resource_name = "death"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [28, 29, 30, 31, 32]
}

[sub_resource type="Animation" id="Animation_5u8s7"]
resource_name = "idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_eugi2"]
resource_name = "walk"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [7, 8, 9, 10, 11, 12]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ewmtm"]
_data = {
"RESET": SubResource("Animation_5niwf"),
"attack": SubResource("Animation_brla0"),
"death": SubResource("Animation_ph41n"),
"idle": SubResource("Animation_5u8s7"),
"walk": SubResource("Animation_eugi2")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_ug71s"]
radius = 63.0079

[node name="Slime" type="CharacterBody2D" node_paths=PackedStringArray("_attack_timer", "_texture", "_animation") groups=["enemy"]]
script = ExtResource("1_w8sym")
_attack_timer = NodePath("AttackTimer")
_texture = NodePath("Texture")
_animation = NodePath("Animation")

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_s47f0")

[node name="Texture" type="Sprite2D" parent="."]
texture = ExtResource("1_wt0e8")
hframes = 7
vframes = 5

[node name="Animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ewmtm")
}

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="DetectionArea" type="Area2D" parent="."]

[node name="Collision" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(0, 4)
shape = SubResource("CircleShape2D_ug71s")

[connection signal="animation_finished" from="Animation" to="." method="_on_animation_finished"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
